--- a/WearCompass/app/build.gradle
+++ b/WearCompass/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-wearable:15.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation "com.android.support:support-core-utils:23.4.0"
+    implementation 'com.android.support:support-v4:23.4.0'
 }
